2005-10-27  Dan Winship  <danw@novell.com>

	bgo #316313 / bnc #116762, and probably also bgo #318252

	* libsoup/soup-message-io.c (soup_message_io_stop): clear io->conn
	after releasing it, to make sure we can't accidentally release it
	twice.

	* libsoup/soup-connection.c (clear_current_request): Call
	soup_message_io_stop() on the cleared request.

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_post): do a
	little dance here to make sure the session can't queue another
	message on the connection while we're in the process of requeuing
	the original one.

2005-08-30  Tor Lillqvist  <tml@novell.com>

	* libsoup-zip.in: Include documentation in developer zipfile.

2005-08-22  Dan Winship  <danw@novell.com>

	* libsoup/soup-soap-message.c (soup_soap_message_class_init): Call
	g_type_class_add_private.

	* configure.in: Bump to 2.2.6.1

	* NEWS: update

2005-08-22  Dan Winship  <danw@novell.com>

	* configure.in: Bump to 2.2.6. Bump SOUP_AGE and SOUP_CURRENT for
	soup_server_get_socket() addition.

	* NEWS: update

2005-08-22  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection.c (set_current_request,
	clear_current_request): Fix g_object_add/remove_weak_pointer usage
	to prevent a crash when canceling a request. From Tambet.

2005-08-16  Dan Winship  <danw@novell.com>

	Fix a connection leak reported by Tambet.

	* libsoup/soup-connection.c (send_request): rather than tracking
	the message progress via signals, call
	soup_message_send_request_internal() and have it call
	soup_connection_release() when it's done.
	(request_restarted, request_done): gone
	(clear_current_request): handle disconnecting (if necessary) and
	updating last_used time here.
	(soup_connection_release): Call clear_current_request().
	(dispose): Call clear_current_request()

	* libsoup/soup-message-client-io.c
	(soup_message_send_request_internal): New. Takes a SoupConnection
	in addition to the other args, and passes that on to
	soup-message-io.
